--- a/Sass/pages/_restaurants.scss
+++ b/Sass/pages/_restaurants.scss
@@ -1,3 +1,10 @@
+.titre_lacarte_coeur {
+  position: relative;
+  width: 70%;   
+  align-items:start;
+  padding-left: 10px;  
+}
+
 .lapalette {
   width: 100%;
 }
@@ -18,7 +25,82 @@
     width: 100%; 
   }
 
-.titre_menus_madagascar {
+.menu  {
+    width: 98%;
+    height: 72px;
+    margin: auto;    
+    display:flex;
+    align-content:center;
+    align-items:center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content:center;
+    padding: 0.1rem;
+    margin: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    transition:all 0.5s;
+    -webkit-transition:all 0.5s;
+    -moz-transition:all 0.5s;
+    -ms-transition:all 0.5s;
+    -o-transition:all 0.5s; 
+      
+  }  
+
+.plats {
+    width:100%;
+    height:69px;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 15.04px;
+    box-shadow: 0px 4.011494159698486px 8.043103218078613px 0px rgba(0, 0, 0, 0.1);
+    display:flex;
+    justify-content:flex-end;
+    align-items:end;
+    overflow: hidden;
+    margin-bottom: 10px;   
+  }
+   
+.menu:hover .plats .validation {
+    width:80px;
+    position: relative;
+    align-items: flex-start;  
+  }
+
+.menu-txt {
+    height:75px;
+    width: 100%;
+    padding-left: 10px;
+    display: flex;   
+    justify-content:center;
+    margin: auto;
+    flex-direction: column;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+.prix-txt {
+    width: 30px;
+    position:fixed;
+    top:24px;
+    left: -30px;
+    font-weight: 700;
+    font-size: 0.850em;   
+  }
+
+.titre_menus {
+    position:relative;
+    bottom:5px;
+    font-weight: 700;
+    font-size: 1.01em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 40px;
+  }
+
+.titre_menus_canard {
     position:relative;
     bottom:5px;
     font-weight: 700;
@@ -26,7 +108,85 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    padding-right: 40px;
+  }
+  
+.titre_menus_madagascar {
+    position:relative;
+    bottom:5px;
+    font-weight: 700;
+    font-size: 0.99em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 65px;
+  }  
+  
+.accompagnement  {
+    position:relative;
+    bottom:15px;
+    font-weight: 500;
+    font-size: 0.750rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 55px;
+    padding-bottom: 10px;
+  }
+
+.accompagnement_ribambelle {
+    position:relative;
+    bottom:15px;
+    font-weight: 500;
+    font-size: 0.750rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     padding-right: 45px;
+    padding-bottom: 10px;
+} 
+
+.accompagnement-madagascar  {
+    position:relative;
+    bottom:15px;
+    font-weight: 500;
+    font-size: 0.750rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 100px;  
+}
+
+.accompagnement_truffe  {
+    position:relative;
+    bottom:15px;
+    font-weight: 500;
+    font-size: 0.750rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 48px;
+    padding-bottom: 10px;
+}
+
+.entrees, .plates, .desserts {
+    gap: 5px; 
+    margin-left: 5px;  
+  }
+
+.entrees {
+    animation: decalage 2s ;
+    -webkit-animation: decalage 2s ;
+  }
+
+.plates {
+    animation: decalage 2.5s;
+    -webkit-animation: decalage 2.5s;
+  }
+
+.desserts {
+    animation: decalage 3s;
+    -webkit-animation: decalage 3s;
   }
 
 .img-restaurant  {
@@ -43,20 +203,69 @@
   }
 
 .img-enchantee-accueil {
-      width: 100%;
-      height:230px;
-      object-fit: cover;  
+    width: 100%;
+    height:230px;
+    object-fit: cover;  
   }
 
-.accompagnement-madagascar  {
-    position:relative;
-    bottom:15px;
-    font-weight: 500;
-    font-size: 0.860rem;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    padding-right: 70px;  
+.commander {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-   
+ //Media query Tablette//
+ @media (min-width: 767.98px) and (max-width: 1023.98px) {
+
+  .titre_lacarte_coeur {
+    position: relative;
+    width: 100%; 
+    padding: 0;   
+  }
+
+  .menu {
+    width: 60%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+ }
+
+ //Media query Desktop 1024px//
+@media (min-width: 1023.98px) and (max-width: 1439.98px) {
+
+  .titre_lacarte_coeur {
+    position: relative;
+    width: 100%;
+    margin: auto;
+    padding: 0;
+  }
+
+  .menu {
+    width: 60%;
+    justify-content:center;
+    align-items: center;
+    margin: auto;     
+  }
+}
+
+//Media query Desktop > 1024px//
+@media (min-width: 1439.98px) and (max-width: 2000px) {
+
+  .titre_lacarte_coeur {
+    position: relative;
+    width: 100%;
+    margin: auto;
+    padding: 0;
+  }
+
+  .menu {
+    width: 60%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+}
