--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -54,7 +54,7 @@ ul {
   } 
 
 b {    
-    font-size: 1em;
+    font-size: 16px;
     font-weight: 500;
     line-height: 18.75px;
     letter-spacing: 0em;
